# eEVM

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/eEVM/: trace.h  util.h
include/eEVM/: bigint.h  stack.h
samples/disassembler/: CMakeLists.txt  main.cpp
samples/erc20/: CMakeLists.txt  main.cpp
samples/hello_world/: CMakeLists.txt  main.cpp
samples/sum/: CMakeLists.txt  main.cpp
simple/: CMakeLists.txt
simple/include/simple/: simpleglobalstate.h
simple/src/: simpleaccount.cpp  simpleglobalstate.cpp  simplestorage.cpp
src/: processor.cpp
tests/: CMakeLists.txt  harness.cpp  main.cpp
